--- a/multi-containers.cabal
+++ b/multi-containers.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a0dbf043f36ea3e7b154b8600e12a32a583e684d9d691d2ccfbbd6d6553d71c8
+-- hash: 75f73e60c7a46f9cbea5731f323ac8a65e150269ef2233ae0ea00e2c87219c04
 
 name:           multi-containers
 version:        0.1.0.0
@@ -39,17 +39,32 @@ library
     , extra
   default-language: Haskell2010
 
-test-suite multi-containers-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
+executable test-gen
+  main-is: Main.hs
   other-modules:
       Paths_multi_containers
   hs-source-dirs:
-      test
+      test-gen
+  build-depends:
+      base >=4.7 && <5
+    , containers
+    , extra
+    , filepath
+  default-language: Haskell2010
+
+test-suite hspec
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+      Data.MultimapSpec
+      Paths_multi_containers
+  hs-source-dirs:
+      test/hspec
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
     , extra
+    , hspec
     , multi-containers
   default-language: Haskell2010
