--- a/package.yaml
+++ b/package.yaml
@@ -7,8 +7,8 @@ maintainer:          "free@cofree.io"
 copyright:           "2019 Ziyang Liu"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
+  - ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -20,20 +20,28 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/zliu41/multi-containers#readme>
 
 dependencies:
-- base >= 4.7 && < 5
-- containers
-- extra
+  - base >= 4.7 && < 5
+  - containers
+  - extra
 
 library:
   source-dirs: src
 
-tests:
-  multi-containers-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+executables:
+  test-gen:
+    main: Main.hs
+    source-dirs: test-gen
     dependencies:
-    - multi-containers
+      - filepath
+
+tests:
+  hspec:
+    main: Main.hs
+    source-dirs: test/hspec
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - hspec
+      - multi-containers
