--- a/multi-containers.cabal
+++ b/multi-containers.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ac90048e6c03004cbdfe3dd0520e37ec21d1e4df33d7deecb17cf794bcc444e5
+-- hash: 283ae2cba093750ef3ead9d7157ad44d3836e8cfe1beff9800cdcb3047b885fb
 
 name:           multi-containers
 version:        0.1.0.0
@@ -49,6 +49,7 @@ executable test-gen
   build-depends:
       base >=4.7 && <5
     , containers >=0.5.10.2 && <0.7
+    , directory >=1.3.0.2 && <1.4
     , extra >=1.6.9 && <1.7
     , filepath >=1.4.1.2 && <1.5
   default-language: Haskell2010
@@ -57,6 +58,7 @@ test-suite hspec
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
+      Data.Multimap.SetSpec
       Data.MultimapSpec
       Paths_multi_containers
   hs-source-dirs:
