Move tes generator out of package

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,12 +1,12 @@
 steps:
   - label: GHC 8.6.5
-    command: "stack build && stack exec test-gen && stack --resolver lts-13.21 test"
+    command: "runhaskell TestGen && stack --resolver lts-13.21 test"
     branches: "master"
 
   - label: GHC 8.4.4
-    command: "stack build && stack exec test-gen && stack --resolver lts-12.26 test"
+    command: "runhaskell TestGen && stack --resolver lts-12.26 test"
     branches: "master"
 
   - label: GHC 8.2.2
-    command: "stack build && stack exec test-gen && stack --resolver lts-11.22 test"
+    command: "runhaskell TestGen && stack --resolver lts-11.22 test"
     branches: "master"
