--- a/multi-containers.cabal
+++ b/multi-containers.cabal
@@ -1,7 +1,7 @@
 cabal-version:  2.4
 
 name:           multi-containers
-version:        0.1.0.2
+version:        0.1.1
 synopsis:       A few multimap variants.
 description:    A library that provides a few multimap variants.
 category:       Data Structures
@@ -13,7 +13,7 @@ copyright:      2019-2020 Ziyang Liu
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
-tested-with:    GHC==8.8.1, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2
+tested-with:    GHC==8.10.1, GHC==8.8.2, GHC==8.6.5, GHC==8.4.4
 
 extra-source-files:
     ChangeLog.md
@@ -29,6 +29,8 @@ library
       Data.Multimap.Set
       Data.Multimap.Table
   other-modules:
+      Paths_multi_containers
+  autogen-modules:
       Paths_multi_containers
   hs-source-dirs:
       src
@@ -46,13 +48,15 @@ test-suite hspec
       Data.Multimap.TableSpec
       Data.MultimapSpec
       Paths_multi_containers
+  autogen-modules:
+      Paths_multi_containers
   hs-source-dirs:
       test/hspec
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers >=0.5.10.2 && <0.7
-    , hspec >=2.4.8 && <2.8
+    , hspec >=2.4.8 && <3
     , multi-containers
   default-language: Haskell2010
   build-tool-depends: hspec-discover:hspec-discover == 2.*
