--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        ghc: ["8.6.5", "8.8.4", "8.10.1"]
+        ghc: ["8.10.2", "8.8.4", "8.6.5"]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@2215b2c
+      - uses: actions/setup-haskell@v1.1.3
         id: setup-haskell-cabal
         with:
           ghc-version: ${{ matrix.ghc }}
