--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,20 +12,22 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        ghc: ["8.10.2", "8.8.4", "8.6.5"]
+        ghc: ["9.0.1", "8.10.4", "8.8.4", "8.6.5"]
+    env:
+      CONFIG: "--enable-tests --enable-benchmarks"
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@v1.1.3
+      - uses: haskell/actions/setup@v1
         id: setup-haskell-cabal
         with:
           ghc-version: ${{ matrix.ghc }}
-          cabal-version: "3.2"
+          cabal-version: "3.4"
       - run: cabal v2-update
-      - run: cabal v2-freeze
+      - run: cabal v2-freeze $CONFIG
       - uses: actions/cache@v2
         with:
           path: |
             ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
             dist-newstyle
           key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
-      - run: cabal v2-test
+      - run: cabal v2-test $CONFIG
