--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,10 @@ on:
       - synchronize
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        ghc: ["9.0.1", "8.10.7", "8.8.4", "8.6.5"]
+        ghc: ["9.2.1", "9.0.1", "8.10.7", "8.8.4", "8.6.5"]
     env:
       CONFIG: "--enable-tests --enable-benchmarks"
     steps:
