--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - ci
   pull_request:
     types:
       - opened
@@ -12,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ghc: ["9.2.1", "9.0.1", "8.10.7", "8.8.4", "8.6.5"]
+        ghc: ["9.6.1", "9.4.5", "9.2.7", "9.0.2", "8.10.7", "8.8.4", "8.6.5"]
     env:
       CONFIG: "--enable-tests --enable-benchmarks"
     steps:
